# vulnix-vex

./: .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json  vulnix-vex.desktop
frontend/: Cargo.toml  tailwind.config.js
frontend/public/: index.html  style.css
frontend/src/: lib.rs  main.js
frontend/styles/: tailwind.css
scripts/: build-assets.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
vex-data/: Cargo.toml
vex-data/src/: lib.rs
